# domust

./: .gitignore  Cargo.toml  README.md  domust-completion  gh-release.sh
.github/workflows/: release.yaml  release.yml
src/: main.rs
src/core/: configuration.rs  mod.rs
src/definition/: arg_parser.rs  completion.rs  configuration.rs  mod.rs
src/devices/: broadlink.rs  mod.rs  switchbot.rs  tuya.rs
