[package]
name = "domust"

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
base64 = "0.21.2"
hex = "0.4"
tokio = { version = "1.15", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
