[package]
name = "domust"
description = "Domust is a home automation system that allows you to control your home form your computer."
homepage = "https://github.com/lucafulgenzi/domust"
repository = "https://github.com/lucafulgenzi/domust"
license = "AGPL-3.0"
authors = ["Luca Fulgenzi <luca.fugenzi@justanother.cloud>"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.14"
base64 = "0.21.2"
hex = "0.4"
tokio = { version = "1.15", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
shellexpand = "3.1.0"
log = "0.4"
env_logger = "0.10.0"
clap = { version = "4.3.9", features = ["derive"] }